--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Github Pages
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -22,12 +22,13 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Deploy to Github Pages
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        npm install
+        npm run build
+        cd dist
+        git init
+        git add -A
+        git commit -m 'deploy'
+        git push -f git@github.com:objectivehtml/coloardo-covid-data.git master:coloardo-covid-data
